<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke">Joke</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="dairy_free">DairyFree</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="original">Original</string>
    <string name="consistency">Consistency</string>
    <string name="grams">Grams</string>
    <string name="save_to_favorite">Save To Favorite</string>
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_all">Delete All</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet. </string>
    <string name="error">Error</string>
</resources>