<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvIngredientsLowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/strokeColor"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backgroundIngredientsLowLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardBackgroundColor"
            android:elevation="2dp">

            <View
                android:id="@+id/vWhiteBackgroundIngredientsLowLayout"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivIngredientsLowLayout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="@id/vWhiteBackgroundIngredientsLowLayout"
                app:layout_constraintEnd_toEndOf="@id/vWhiteBackgroundIngredientsLowLayout"
                app:layout_constraintStart_toStartOf="@id/vWhiteBackgroundIngredientsLowLayout"
                app:layout_constraintTop_toTopOf="@id/vWhiteBackgroundIngredientsLowLayout" />

            <TextView
                android:id="@+id/tvIngredientsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vWhiteBackgroundIngredientsLowLayout"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Name" />

            <TextView
                android:id="@+id/tvIngredientAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/tvIngredientsName"
                app:layout_constraintTop_toBottomOf="@+id/tvIngredientsName"
                tools:text="100" />

            <TextView
                android:id="@+id/tvIngredientsUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/tvIngredientAmount"
                app:layout_constraintStart_toEndOf="@id/tvIngredientAmount"
                app:layout_constraintTop_toTopOf="@id/tvIngredientAmount"
                tools:text="@string/grams" />

            <TextView
                android:id="@+id/tvIngredientsConsistency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvIngredientAmount"
                app:layout_constraintTop_toBottomOf="@id/tvIngredientAmount"
                tools:text="@string/consistency" />

            <TextView
                android:id="@+id/tvIngredientsOriginal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvIngredientsConsistency"
                app:layout_constraintTop_toBottomOf="@id/tvIngredientsConsistency"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/original" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
